[tool.poetry]
name = "myproject"
version = "0.1.0"

[project]
name = "mypackage"
dependencies = [
    "anomalib[vim-clip]==2.0.0",
    "numpy==2.0.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "lightning==2.5.5",
    "opencv-python==4.12.0.88",
    "kornia==0.8.1",
    "tifffile==2025.9.30",
    "matplotlib==3.10.6",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "scikit-image==0.25.2",
    "openvino==2025.3.0",
    "timm==1.0.20",
    "einops==0.8.1",
    "FrEIA==0.2",
    "dotenv==0.9.9",
    "open-clip-torch==3.2.0"
]
requires-python = ">=3.11,<3.14"

 